gedcom/tests/snapshots/tests__golden_files@no_vers.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\", err.with_source_code(NamedSource::new(filename, data)))"
input_file: gedcom/tests/format_inputs/no_vers.ged
---
gedcom::file_format_error::missing_vers_record

  × validating no_vers.ged
  ├─▶ File structure error
  ╰─▶ version is missing: HEAD/GEDC record is missing `VERS` entry
   ╭─[no_vers.ged:2:1]
 1 │ 0 HEAD
 2 │ 1 GEDC
   · ───┬──
   ·    ╰── this record should contain a VERS entry
 3 │ 0 TRLR
   ╰────
  help: this has been required since GEDCOM 5.0 (1991), so this might be an older file
